Created: Create, Update, Delete Products pages

--- a/GeekShopping.ProductAPI/Properties/launchSettings.json
+++ b/GeekShopping.ProductAPI/Properties/launchSettings.json
@@ -29,3 +29,17 @@
     }
   }
 }
+/*
+{
+  "profiles": {
+    "GeekShopping.ProductAPI": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "http://localhost:5000"
+    }
+  }
+}
+*/
