--- a/GeekShopping.Web/appsettings.json
+++ b/GeekShopping.Web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ServiceUrls": {
-    "ProductApi" :  "http://localhost:5000"
+    "ProductAPI" :  "http://localhost:5000"
   }
 }
