Created JWT Token

--- a/GeekShopping.ProductAPI/appsettings.json
+++ b/GeekShopping.ProductAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MySqlConnection": {
-    "MySqlConnectionString": "Server=localhost;Database=dbdonet;Uid=root;Pwd=root;SslMode=none;"
+    "MySqlConnectionString": "Server=localhost;Database=dbdonet;Uid=root;Pwd=root"
   },
   "Logging": {
     "LogLevel": {
