--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.8'
 
 services:
-    
-      mysql57:
+
+    mysql57:
         container_name: mysql57
         image: mysql:5.7
         restart: always
@@ -15,6 +15,16 @@ services:
             MYSQL_PASSWORD: pass
         ports:
             - "3306:3306"
+        networks:
+            - mysql_network
+    rabbitmq:
+        image: rabbitmq:3-management
+        container_name: dotrabbitmq
+        ports:
+            - 15672:15672
+        volumes:
+            - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
+            - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
         networks:
             - mysql_network
 
