Created consumer in PaymentAPI

--- a/GeekShopping.PaymentAPI/GeekShopping.PaymentAPI.csproj
+++ b/GeekShopping.PaymentAPI/GeekShopping.PaymentAPI.csproj
@@ -19,6 +19,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\GeekShopping.PaymentProcessor\GeekShopping.PaymentProcessor.csproj" />
 		<ProjectReference Include="..\GerekShopping.MessageBus\GerekShopping.MessageBus.csproj" />
 	</ItemGroup>
  
