--- a/GeekShopping.CartAPI/GeekShopping.CartAPI.csproj
+++ b/GeekShopping.CartAPI/GeekShopping.CartAPI.csproj
@@ -24,7 +24,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\GerekShopping.MessageBus\GerekShopping.MessageBus.csproj" />
+	  <ProjectReference Include="..\GerekShopping.MessageBus\GeekShopping.MessageBus.csproj" />
+	  
 	</ItemGroup>
 
 </Project>
