--- a/GeekShopping.CartAPI/GeekShopping.CartAPI.csproj
+++ b/GeekShopping.CartAPI/GeekShopping.CartAPI.csproj
@@ -24,8 +24,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\GerekShopping.MessageBus\GeekShopping.MessageBus.csproj" />
-	  
+	  <ProjectReference Include="..\GeekShopping.MessageBus\GeekShopping.MessageBus.csproj" />
 	</ItemGroup>
 
 </Project>
