--- a/GeekShopping.Email/GeekShopping.Email.csproj
+++ b/GeekShopping.Email/GeekShopping.Email.csproj
@@ -18,5 +18,9 @@
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
 	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\GeekShopping.MessageBus\GeekShopping.MessageBus.csproj" />
+		<ProjectReference Include="..\GeekShopping.PaymentProcessor\GeekShopping.PaymentProcessor.csproj" />
+	</ItemGroup>
 
 </Project>
