--- a/GeekShopping.PaymentAPI/GeekShopping.PaymentAPI.csproj
+++ b/GeekShopping.PaymentAPI/GeekShopping.PaymentAPI.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="RabbitMQSender\BaseMessage.cs" />
+  </ItemGroup>
 	<ItemGroup>
 
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.13" />
@@ -19,8 +23,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\GeekShopping.MessageBus\GeekShopping.MessageBus.csproj" />
 		<ProjectReference Include="..\GeekShopping.PaymentProcessor\GeekShopping.PaymentProcessor.csproj" />
-		<ProjectReference Include="..\GerekShopping.MessageBus\GeekShopping.MessageBus.csproj" />
 	</ItemGroup>
  
 
