--- a/GeekShopping.APIGateway/GeekShopping.APIGateway.csproj
+++ b/GeekShopping.APIGateway/GeekShopping.APIGateway.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+	  <PackageReference Include="IdentityModel" Version="6.0.0-preview.2" />
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.13" />
+	  <PackageReference Include="Ocelot" Version="17.0.0" />
   </ItemGroup>
+
 
 </Project>
